--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "dependencies": {
         "@vitejs/plugin-legacy": "^5.4.3",
         "react": "^18.3.1",
-        "react-dom": "^18.3.1"
+        "react-dom": "^18.3.1",
+        "tailwind-merge": "^2.5.4"
     },
     "devDependencies": {
         "@eslint/js": "^9.13.0",
